Attempted to Finish Section 4. Failed rather miserably. Colors are correct and classes/id's have been created but alignment be a bi**h. Cheers

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,44 @@ button {
     height: 500px;
 }
 
+#BlueBoi {
+    background-color: #3882F6;
+    border-radius: 25px;
+    display: grid;
+    grid-template-columns: 1fr 50%;
+    grid-gap: 10px;
+    align-items: center;
+}
+
+h4 {
+    color: #E5E7EB;
+    height: 50px;
+    width: 300px;
+    border: red solid 2px;
+    grid-column: 1;
+}
+
+#BlueButton {
+    height: 40px;
+    width: 125px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: #3882F6;
+    border: #F9FAF8 solid 3px;
+    color: #E5E7EB;
+    font-size: 18px;
+    border-radius: 10px;
+    box-shadow: none;
+}
+
+#BlueP {
+    color: #E5E7EB;
+    height: 50px;
+    width: 400px;
+    border: red solid 2px;
+    grid-column: 1;
+}
+
 .Footer {
     background-color: #1F2937;
     height: 65px;
